# Desafio-Tunts

./: .gitignore  README.md  creds.json  dev-requirements.txt  pyproject.toml  requirements.txt  run.py
desafio_tunts/: main.py  sheet_funcs.py
tests/: test_desafio_tunts.py
